[gd_scene load_steps=22 format=3 uid="uid://caapa6p80eydk"]

[ext_resource type="Script" path="res://scripts/turret.gd" id="1_oitlh"]
[ext_resource type="Texture2D" uid="uid://bh603q4jnt5pw" path="res://Assets/Animation Tilesets/Turret_Tileset.png" id="2_en7wx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a216x"]
atlas = ExtResource("2_en7wx")
region = Rect2(48, 22, 16, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_ea4uw"]
atlas = ExtResource("2_en7wx")
region = Rect2(0, 66, 48, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdg8h"]
atlas = ExtResource("2_en7wx")
region = Rect2(48, 66, 48, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_g15t7"]
atlas = ExtResource("2_en7wx")
region = Rect2(96, 66, 48, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylswx"]
atlas = ExtResource("2_en7wx")
region = Rect2(144, 66, 48, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gmd5"]
atlas = ExtResource("2_en7wx")
region = Rect2(192, 66, 48, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtgsq"]
atlas = ExtResource("2_en7wx")
region = Rect2(240, 66, 48, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuqhx"]
atlas = ExtResource("2_en7wx")
region = Rect2(288, 66, 48, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_glynq"]
atlas = ExtResource("2_en7wx")
region = Rect2(336, 66, 48, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_uvdoj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a216x")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea4uw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdg8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g15t7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylswx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gmd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtgsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuqhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glynq")
}],
"loop": true,
"name": &"turretExplosion",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_pexkc"]
atlas = ExtResource("2_en7wx")
region = Rect2(48, 6, 22, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_yanh4"]
atlas = ExtResource("2_en7wx")
region = Rect2(16, 38, 27, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_36blt"]
atlas = ExtResource("2_en7wx")
region = Rect2(63, 38, 27, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_6khv2"]
atlas = ExtResource("2_en7wx")
region = Rect2(110, 38, 27, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_6v4w7"]
atlas = ExtResource("2_en7wx")
region = Rect2(157, 38, 27, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_gpr72"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pexkc")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yanh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36blt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6khv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6v4w7")
}],
"loop": false,
"name": &"fire",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dit6n"]
radius = 88.5268

[sub_resource type="Gradient" id="Gradient_qx7v2"]
offsets = PackedFloat32Array(0.3, 0.662338)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1x8e0"]
gradient = SubResource("Gradient_qx7v2")
fill = 1
fill_from = Vector2(0.504587, 0.472477)

[node name="Turret" type="Node2D"]
script = ExtResource("1_oitlh")

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
scale = Vector2(1.5, 1.5)
color = Color(0.34902, 1, 1, 0.4)
polygon = PackedVector2Array(-89, 0, -86, 23, -77, 44, -63, 62, -44, 77, -23, 86, 0, 89, 23, 86, 45, 77, 63, 63, 77, 44, 86, 23, 89, 0, 86, -23, 77, -45, 63, -63, 45, -77, 23, -86, 0, -89, -23, -86, -45, -77, -63, -63, -77, -45, -86, -23)

[node name="fireRate" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="reloadSpeed" type="Timer" parent="."]
one_shot = true

[node name="explosionLight" type="Timer" parent="."]
wait_time = 0.1

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_uvdoj")

[node name="Barrel" type="Node2D" parent="."]
position = Vector2(-1.19209e-07, 4)
rotation = 1.02974

[node name="Barrel2" type="AnimatedSprite2D" parent="Barrel"]
position = Vector2(1.0227, 9.94757)
rotation = 1.5708
scale = Vector2(1, -1)
sprite_frames = SubResource("SpriteFrames_gpr72")
animation = &"fire"
frame = 3
frame_progress = 1.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_dit6n")

[node name="BulletSpawn" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="BulletSpawn"]
position = Vector2(0, 23)

[node name="Polygon2D2" type="Polygon2D" parent="BulletSpawn"]
position = Vector2(0, 23)
scale = Vector2(0.02, 0.02)
color = Color(0.226167, 0.23, 0.2185, 1)
polygon = PackedVector2Array(-89, 0, -86, 23, -77, 44, -63, 62, -44, 77, -23, 86, 0, 89, 23, 86, 45, 77, 63, 63, 77, 44, 86, 23, 89, 0, 86, -23, 77, -45, 63, -63, 45, -77, 23, -86, 0, -89, -23, -86, -45, -77, -63, -63, -77, -45, -86, -23)

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-24, 16)
enabled = false
color = Color(1, 1, 0, 1)
texture = SubResource("GradientTexture2D_1x8e0")

[connection signal="timeout" from="fireRate" to="." method="_on_fire_rate_timeout"]
[connection signal="timeout" from="reloadSpeed" to="." method="_on_reload_speed_timeout"]
[connection signal="timeout" from="explosionLight" to="." method="_on_explosion_light_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
